Fixed navbar overlapping Hero section

--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ body {
 	font-style: bold;
 }
 
+#navbar-placeholder {
+	position: sticky;
+	top: 0;
+	z-index: 3;
+}
+
 .nav-logo-mobile {
 	display: inline-block;
 	box-sizing: border-box;
